# gtow-api-spec-plan

./: .gitignore  API.md  GAME_FLOW_EXAMPLE.md  PRECOMPUTE_API.md  README.md  openapi-preflop.yaml
api/: Cargo.toml  README.md
api/config/: .env.example
api/src/: main.rs
api/src/config/: constants.rs
api/src/routes/: mod.rs  next_actions.rs  preflop_solution.rs
api/src/services/: mod.rs  node_traversal.rs  tree_loader.rs
api/src/transform/: action_builder.rs  game_state.rs  hand_index.rs  mod.rs  next_actions.rs  player_info.rs  spot_solution.rs
api/src/types/: api.rs  mod.rs  s3.rs
docs/: BACKEND_ARCHITECTURE.md  BACKEND_ENV.md  NEXT_ACTIONS_API.md  PREFLOP_NEXT_ACTIONS_API.md  PREFLOP_SOLUTION_API.md  SOLUTION_API.md
examples/next-actions/1_flop_oop_check/: curl.txt
examples/next-actions/2_flop_ip_check/: curl.txt
examples/next-actions/3_turn_oop_check/: curl.txt
examples/next-actions/4_turn_ip_check/: curl.txt
examples/next-actions/5_river_oop_check/: curl.txt
examples/next-actions/6_river_ip_check/: curl.txt
examples/preflop/1_utg2_open_spot/: curl.txt  payload.txt  response.json
examples/preflop/2_utg1_open_facing_spot/: curl.txt  payload.txt  response.json
examples/preflop/3_btn_open_sb_next/: curl.txt  payload.txt  response.json
examples/preflop/4_btn_facing_3bet_spot/: curl.txt  response.json
examples/preflop/5_cold_call_chain_spot/: curl.txt  payload.txt  response.json
examples/preflop/6_3bet_squeeze_spot/: curl.txt  payload.txt  response.json
examples/preflop/7_allin_decision_spot/: curl.txt  payload.txt  response.json
(+9 files in other folders)
