[package]
name = "gtow-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
lru = "0.12"
thiserror = "2"
aws-config = "1"
aws-sdk-s3 = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
